--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERNAME=aa_nadim
-DB_PASSWORD=aa_nadim123
-DB_NAME=scraping_db
+DB_USERNAME=tanvir
+DB_PASSWORD=tanvir1234
+DB_NAME=scrapingdb1
 TEST_DB_NAME=test_db
 DB_PORT=5432
 DB_HOST=postgres
